--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "set DEBUG=app:* nodemon index",
-    "start": "NODE_ENV=production node index",
-    "prepare": "husky install"
+    "dev": "set DEBUG=app:* & nodemon index",
+    "start": "set NODE_ENV=production & node index"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +23,15 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.3.2"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.js": [
+      "eslint --cache --fix",
+      "git add"
+    ]
   }
 }
