--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "set DEBUG=app:* && nodemon index",
-    "start": "set NODE_ENV=production & node index"
+    "start": "set NODE_ENV=production & node index",
+    "test": "mocha --exit"
   },
   "keywords": [],
   "author": "",
@@ -23,8 +24,12 @@
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
+    "mocha": "^9.0.1",
     "nodemon": "^2.0.7",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "proxyquire": "^2.1.3",
+    "sinon": "^11.1.1",
+    "supertest": "^6.1.3"
   },
   "husky": {
     "hooks": {
